# unsupervised_elicitation

./: .env.example  .gitignore  README.md  evaluate.py  plot_results.py  pyproject.toml  requirements.txt  run.py  setup.sh
icm/: dataset_utils.py  hyperbolic_client.py  icm.py  main.py  model_query.py
results/: evaluation_results.json  truthfulqa_meta_llama_3.1_405b_icm_labeled.jsonl  truthfulqa_meta_llama_3.1_405b_icm_result.json  truthfulqa_meta_llama_3.1_405b_icm_stats.json
